--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,39 @@
 {
-    "name":         "remmel/i18n-routing-bundle",
-    "description":  "This bundle allows you to create i18n routes.",
-    "keywords":     ["translation","multilanguage","routing"],
-    "homepage": "http://jmsyst.com/bundles/JMSI18nRoutingBundle",       
-    "type":         "symfony-bundle",
-    "license":      "Apache2",
-    "authors": [
-        {
-            "name":   "Johannes M. Schmitt",
-            "email":  "schmittjoh@gmail.com"
-        },
-        {
-            "name": "Albert Casademont",
-            "email": "albertcasademont@gmail.com"
-        }
-    ],
-    "require": {
-	"php": "^7.1",
-        "symfony/framework-bundle": "^4.0"
+  "name": "remmel/i18n-routing-bundle",
+  "description": "This bundle allows you to create i18n routes.",
+  "keywords": [
+    "translation",
+    "multilanguage",
+    "routing"
+  ],
+  "homepage": "http://jmsyst.com/bundles/JMSI18nRoutingBundle",
+  "type": "symfony-bundle",
+  "license": "Apache2",
+  "authors": [
+    {
+      "name": "Johannes M. Schmitt",
+      "email": "schmittjoh@gmail.com"
     },
-    "require-dev": {
-        "sensio/framework-extra-bundle": "*",
-        "phpunit/phpunit": "^6.0"
-    },
-    "suggest": {
-        "jms/translation-bundle": "If you want to use the RouteTranslation extractor"
-    },
-    "autoload": {
-        "psr-0": { "JMS\\I18nRoutingBundle": "" }
-    },
-    "target-dir": "JMS/I18nRoutingBundle"
+    {
+      "name": "Albert Casademont",
+      "email": "albertcasademont@gmail.com"
+    }
+  ],
+  "require": {
+    "php": "^7.1",
+    "symfony/framework-bundle": "^4.0"
+  },
+  "require-dev": {
+    "sensio/framework-extra-bundle": "*",
+    "phpunit/phpunit": "^6.0"
+  },
+  "suggest": {
+    "jms/translation-bundle": "If you want to use the RouteTranslation extractor"
+  },
+  "autoload": {
+    "psr-0": {
+      "JMS\\I18nRoutingBundle": ""
+    }
+  },
+  "target-dir": "JMS/I18nRoutingBundle"
 }
